photo-fix upload video on safari WTHZONE-977

--- a/src/assets/styles/third-parties/_custom_primeng.scss
+++ b/src/assets/styles/third-parties/_custom_primeng.scss
@@ -465,7 +465,8 @@ $ui-inputswitch-w: 24px;
     }
     .ui-accordion-header-text {
       font-size: 16px;
-      font-weight: bold;
+      //font-weight: bold;
+      color: $link-color;
     }
   }
   .ui-accordion-content {
